[package]
name = "nfp1315"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "Library for the NFP1315-61A display (I2C SSD1306 driver)"
repository = "https://github.com/ritonun/nfp1315"
readme = "README.md"
keywords = ["NFP1315", "SSD1315", "ESP", "STM"]
categories = ["no-std", "embedded"]
include = ["**/*.rs", "README.md", "Cargo.toml"]

[dependencies]
embedded-hal = "1.0.0"
